# ai-lol

./: .env.example  .gitignore  Dockerfile  FastAPI.openapi.json  README.md  alembic.ini  demo.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 283a86f949a6_initial.py
app/: agent_core.py  config.py  main.py  models.py  worker.py
app/data/: test.txt
data/: readme.txt
