[project]
name = "hjh-ai-lol"
authors = [{name = "badb0ttle", email = "gebaodi@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "httpx>=1.9.0",
    "aio-pika>=9.6.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "redis[hiredis]>=1.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
    
]
[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]